# pi-camera-stream

./: .gitignore  convert_yolo_ncnn_to_hef.py  pyproject.toml
resources/cpp_postprocessing/: .clangd  CMakeLists.txt  clangd.ouput.txt  compile_commands.json
src/pi_camera_stream/: camera.py  detection_callback.py  detection_engine.py  detection_pipeline.py  stream_server.py  web_server.py
yolov8n_ncnn_model/: metadata.yaml  model.ncnn.param
